--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,3 +19,16 @@ body {
   margin-top: 140px;
   margin-bottom: 60px;
 }
+
+.mw-50 {
+  max-width: 50%;
+}
+
+.comicContent {
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 20px;
+}
+
+.comicCover {
+  width: 230px;
+}
